# redink

./: CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  install.sh  pyproject.toml  targets.txt
docs/: architecture.md  cli-contract.md  cost-model.md  design-principles.md  ethics-and-disclaimer.md  vision.md
examples/: README.md
examples/advanced_scan/: README.md
examples/basic_scan/: README.md  basic_scan.sh  full_scan.sh  json_output.sh  quiet_mode.sh
examples/risk_only_mode/: README.md  json_output.sh  silent.sh
redink/: __init__.py  main.py
redink/config/: common.py  loader.py  ports.yaml  risk-ranges.yaml
redink/core/: context.py  engine.py  model.py  ruleset.py  scoring.py
redink/core/recommendations/: database.py  general.py  ssh.py  tls.py  types.py
redink/core/rules/: __init__.py  base.py
redink/modules/: __init__.py
redink/modules/headers/: fingerprint.py
redink/modules/ports/: rules.py  scanner.py
redink/reports/: __init__.py  console.py  filename.py  json.py  markdown.py  yaml.py
redink/shell/: cli.py  json.py  logger.py  main.py  parser.py
report/: exampleweb.com_20260305T233015Z.yaml  exampleweb.com_20260305T234732Z.yaml  exampleweb.com_20260305T234750Z.json  report_20260223_211627.json  report_20260225_134454.json  report_20260225_135821.json  report_20260225_142238.json  report_20260225_142515.json
src/redink/config/: defaults.yaml
src/redink/core/: context.py  exceptions.py  model.py
src/redink/reports/: model.py  yaml.py
src/redink/shell/: json.py  logger.py  parser.py
src/report/: exampleweb.com_20260307T024127Z.json  exampleweb.com_20260307T024154Z.yaml
tests/: test_engine.py  test_fingerprint.py  test_loader.py  test_logging.py  test_scanner.py  test_scoring.py
tests/config/: malformed.yaml
tests/utils/: service_scanner.py
(+11 files in other folders)
