[project]
name = "redink"
version = "0.0.1"
description = "Read-only security exposure and risk analysis framework"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Alejandro Emiliano Toledo" }]
requires-python = ">=3.10"
keywords = ["security", "risk-analysis", "exposure", "pentesting", "kali-linux"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Topic :: Security",
  "Topic :: System :: Networking",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
]
[project.scripts]
redink = "redink.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
